Add watermark 'LTI Pr2' to index.html

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <h3>Signaler des problèmes au niveau de la plateforme</h3>
         <button id="btnm2p" onclick="getm2p()">Réinitialiser mon m2p</button>
       </div><!-- fin autres -->
+      <div class="filigrane">LTI Pr2</div>
     </div><!-- fin services -->
   </div><!-- fin container -->
   <div id="notifications"></div>
