Add social media icons section
Added social media icons to the layout.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
        </div><!-- fin inputs -->
       </div><!-- fin basinfo -->
     </div><!-- fin infos -->
+    <div id="social">
+      <i class="bi bi-facebook"></i>
+      <i class="bi bi-telephone"></i>
+      <i class="bi bi-phone"></i>
+      <i class="bi bi-whatsapp"></i>
+    </div><!-- fin social -->
     <div id="services">
       <div id="recus">
         <h3>Récupérer vos reçus de versement des frais</h3>
