--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
       </div><!-- fin basinfo -->
     </div><!-- fin infos -->
     <div id="social">
-      <i class="bi bi-facebook"></i>
-      <i class="bi bi-telephone"></i>
-      <i class="bi bi-phone"></i>
-      <i class="bi bi-whatsapp"></i>
+      <a href="https://www.cnfcpp.tn/" target="_blank"><i class="bi bi-globe2"></i></a>
+      <a href="https://www.facebook.com/profile.php?id=61579755939691" target="_blank"><i class="bi bi-facebook"></i></a>
+      <a><i class="bi bi-telephone"></i></a>
+      <a><i class="bi bi-phone"></i></a>
+      <a><i class="bi bi-whatsapp"></i></a>
     </div><!-- fin social -->
     <div id="services">
       <div id="recus">
