--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <div id="social">
       <a href="https://www.cnfcpp.tn/" target="_blank"><i class="bi bi-globe2"></i></a>
       <a href="https://www.facebook.com/profile.php?id=61579755939691" target="_blank"><i class="bi bi-facebook"></i></a>
-      <a><i class="bi bi-telephone"></i></a>
-      <a><i class="bi bi-phone"></i></a>
-      <a><i class="bi bi-whatsapp"></i></a>
+      <a  href="tel:+21678874281" title="Appeler"><i class="bi bi-telephone"></i></a>
+      <a href="tel:+21652434939" title="Appeler"><i class="bi bi-phone"></i></a>
+      <a href="https://wa.me/21652434939" target="_blank" title="WhatsApp"></a>
     </div><!-- fin social -->
     <div id="services">
       <div id="recus">
