--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <a href="https://www.facebook.com/profile.php?id=61579755939691" target="_blank"><i class="bi bi-facebook"></i></a>
       <a  href="tel:+21678874281" title="Appeler"><i class="bi bi-telephone"></i></a>
       <a href="tel:+21652434939" title="Appeler"><i class="bi bi-phone"></i></a>
-      <a href="https://wa.me/21652434939" target="_blank" title="WhatsApp"></a>
+      <a href="https://wa.me/21652434939" target="_blank" title="WhatsApp"><i class="bi bi-whattsapp"></i></a>
     </div><!-- fin social -->
     <div id="services">
       <div id="recus">
