--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@ fetch(sheetURL)
       } else {
         // Étudiant trouvé
         // ✅ Ajout : affichage de la filigrane avec le nom du fichier
-        const filigrane = document.querySelector(".filigrane");
-        filigrane.textContent = data.FileName || "Fichier inconnu";
+        //const filigrane = document.querySelector(".filigrane");
+        //filigrane.textContent = data.FileName || "Fichier inconnu";
         
         document.getElementById("login").style.display = "none";
         currentRow = data.row;
