--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="titre">
-      <h2>LTI-Pr2</h2>
+      <h2>LTI Pr2</h2>
       <h3 id="annuniv">Chargement...</h3>
     </div>
     <div class="userbox">
