--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     <div id="social">
       <a href="https://www.cnfcpp.tn/" target="_blank"><i class="bi bi-globe2"></i></a>
       <a href="https://www.facebook.com/profile.php?id=61579755939691" target="_blank"><i class="bi bi-facebook"></i></a>
-      <a  href="tel:+21678874281" title="Appeler"><i class="bi bi-telephone-fill"></i></a>
-      <a href="tel:+21652434939" title="Appeler"><i class="bi bi-phone-fill"></i></a>
+      <a  href="tel:78874281" title="Appeler"><i class="bi bi-telephone-fill"></i></a>
+      <a href="tel:52434939" title="Appeler"><i class="bi bi-phone-fill"></i></a>
       <a href="https://wa.me/21652434939" target="_blank" title="WhatsApp"><i class="bi bi-whatsapp"></i></a>
     </div><!-- fin social -->
     <div id="services">
